# zig

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.agent/skills/commit/: .last-updated  SKILL.md
.agent/skills/maintenance/: SKILL.md
.agent/skills/update-bindings/: .last-updated  SKILL.md
.agent/skills/update-docs/: SKILL.md
.agent/skills/update-manpages/: .last-updated  SKILL.md
.agent/skills/update-readme/: SKILL.md
.agent/skills/update-website/: .last-updated  SKILL.md
.claude/skills/sync-website/: SKILL.md
.claude/skills/update-bindings/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.claude/skills/update-manpages/: .last-updated  SKILL.md
.claude/skills/update-readme/: SKILL.md
.claude/skills/update-website/: .last-updated  SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  version-bump.yml  website.yml
bindings/typescript/: README.md  REFERENCE.md  package-lock.json  package.json  tsconfig.json
bindings/typescript/src/: builder.ts  index.ts  process.ts  types.ts  version.ts  workflow.ts
bindings/typescript/tests/: builder.test.ts  streaming.test.ts
clients/typescript/: package-lock.json  package.json  tsconfig.json
clients/typescript/src/: client.ts  errors.ts  index.ts  sse.ts  types.ts
clients/typescript/tests/: client.test.ts
docs/: conditions.md  dry-run.md  memory.md  patterns.md  storage.md  variables.md  zug-vs-zag-gap-analysis.md  zug.md  zwf-vs-zag-gap-analysis.md  zwf.md
examples/healthcare/: healthcare.toml  healthcare.zug  healthcare.zwf
examples/healthcare/prompts/: allergist.md  cardiologist.md  dermatologist.md  dietitian.md  emergency-physician.md  endocrinologist.md  ent-specialist.md  gastroenterologist.md  nephrologist.md  neurologist.md  nurse-triage.md  oncologist.md  ophthalmologist.md  orthopedist.md  physical-therapist.md  psychiatrist.md  psychologist.md  pulmonologist.md  rheumatologist.md  urologist.md
examples/healthcare/resources/: patient-profile.md  triage-guidelines.md
examples/healthcare/resources/dropbox/: README.md
manpages/: conditions.md  continue.md  create.md  delete.md  describe.md  list.md  listen.md  memory.md  patterns.md  resources.md  run.md  self.md  serve.md  show.md  validate.md  variables.md  workflow.md  zig.md  zug.md  zwf.md
prompts/config-sidecar/: 1_0.md  1_1.md  1_2.md  1_3.md  1_4.md
prompts/create/: 1_0.md  1_1.md  1_2.md  1_3.md  1_4.md  2_0.md  2_1.md  2_2.md
prompts/examples/: 1_0.md  coordinator-dispatcher.zug  coordinator-dispatcher.zwf  fan-out.zug  fan-out.zwf  generator-critic.zug  generator-critic.zwf  hierarchical-decomposition.zug  hierarchical-decomposition.zwf  human-in-the-loop.zwf  inter-agent-communication.zug  inter-agent-communication.zwf  sequential.zwf
prompts/update/: 1_0.md  1_1.md  1_2.md  1_3.md
scripts/: generate-changelog.sh  release.sh  update-versions.sh  verify-publish.sh
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts
website/: index.html  package-lock.json  package.json  vite.config.ts
website/scripts/: extract-source-data.mjs
website/src/: App.css  App.tsx  main.tsx
website/src/components/: BuiltOnZag.tsx  Features.tsx  Footer.tsx  GettingStarted.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Patterns.tsx  WorkflowFormat.tsx
website/src/components/terminal/: CommandHighlighter.tsx  TerminalLine.tsx  TerminalShell.tsx  index.ts
website/src/data/: logStyles.ts  sourceData.ts  terminalDemos.ts
website/src/hooks/: useTerminalAnimation.ts
zig-cli/: Cargo.toml
zig-cli/src/: cli.rs  main.rs
zig-core/: Cargo.toml
zig-core/src/: config.rs  config_tests.rs  create.rs  create_tests.rs  delete.rs  delete_tests.rs  docs.rs  docs_tests.rs  dry_run.rs  dry_run_tests.rs  error.rs  lib.rs  list.rs  list_tests.rs  listen.rs  listen_tests.rs  man.rs  man_tests.rs  manage.rs  manage_tests.rs  memory.rs  memory_tests.rs  pack.rs  pack_tests.rs  paths.rs  paths_tests.rs  prompt.rs  prompt_tests.rs  resources.rs  resources_manage.rs  resources_manage_tests.rs  resources_tests.rs  resume.rs  resume_tests.rs  run.rs  run_tests.rs  self_cmd.rs  session.rs  session_tests.rs  storage.rs  (+3 more)
zig-core/src/workflow/: mod.rs  model.rs  parser.rs  parser_tests.rs  validate.rs  validate_tests.rs
zig-serve/: Cargo.toml  build.rs
zig-serve/src/: auth.rs  auth_tests.rs  config.rs  config_tests.rs  error.rs  lib.rs  rate_limit.rs  rate_limit_tests.rs  router.rs  session_token.rs  session_token_tests.rs  shutdown.rs  shutdown_tests.rs  state.rs  tls.rs  tls_tests.rs  types.rs  user.rs  user_tests.rs  web.rs
zig-serve/src/handlers/: auth_handler.rs  chat.rs  man.rs  mod.rs  sessions.rs  sessions_tests.rs  user_handler.rs  workflows.rs  workflows_tests.rs
