[package]
name = "zig-cli"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/niclaslindstedt/zig"
homepage = "https://github.com/niclaslindstedt/zig"
description = "Orchestration CLI for AI coding agents — describe, share, and run workflows powered by zag"
keywords = ["ai", "agent", "orchestration", "workflow", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "zig"
path = "src/main.rs"

[dependencies]
zig-core = { version = "0.4.1", path = "../zig-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
