[package]
name = "zig-serve"
version = "0.6.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/niclaslindstedt/zig"
homepage = "https://github.com/niclaslindstedt/zig"
description = "HTTP API server for zig — workflow orchestration engine for AI coding agents"
keywords = ["ai", "agent", "orchestration", "workflow", "api"]
categories = ["web-programming::http-server", "development-tools"]

[dependencies]
zig-core = { version = "0.6.3", path = "../zig-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# User accounts
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
hex = "0.4"

# Rate limiting
governor = "0.8"

# SSE streaming
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Embedded web UI (rust-embed bakes web/dist/ into the binary).
# `interpolate-folder-path` lets us point the embed at `$OUT_DIR/web-dist/`,
# which build.rs populates from `../web/dist/`. Using OUT_DIR keeps the embed
# working after `cargo package`/`cargo publish` extracts the crate, where
# relative paths outside the crate root no longer resolve.
rust-embed = { version = "8", features = ["include-exclude", "interpolate-folder-path"] }
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
